mustache renderer on various template parts OK

--- a/views/admin/admin_settings.json
+++ b/views/admin/admin_settings.json
@@ -3,6 +3,9 @@
 		"id": 		"admin_settings_basic",
 		"title":	"Basic Settings"
 	},{
+		"id":		"admin_settings_frontpage_builder",
+		"title":	"Frontpage Builder"
+	},{
 		"id":		"admin_settings_apikeys",
 		"title":	"API Keys & Personalization"
 	}
