post contents rendered into the templates OK

--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "modernizer": "~2.8.2",
     "font-awesome": "~4.2.0",
     "bootstrap": "~3.3.1",
-    "jquery-sortable": "*"
+    "jquery-sortable": "*",
+    "sass-bootstrap-glyphicons": "*"
   }
 }
