--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "library/honeyguide/vendor/wpthemecustomizer-custom-controls"]
 	path = library/honeyguide/vendor/wpthemecustomizer-custom-controls
 	url = https://github.com/paulund/wordpress-theme-customizer-custom-controls.git
+[submodule "library/honeyguide/vendor/phyl-mustache"]
+	path = library/honeyguide/vendor/phyl-mustache
+	url = https://github.com/phly/phly_mustache.git
