gruntfile changes for building ember (not finished, gives EMFILE error on watch)

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ library/honeyguide/vendor/mustache-php/
 library/honeyguide/vendor/mustache-cache/
 library/honeyguide/vendor/customizer-custom-cotnrols/
 library/honeyguide/vendor/settings-api/
+library/honeyguide/stacks/js/qApp/
