--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-bg-shell": "^2.3.1",
+    "grunt-concurrent": "^2.0.1",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-jshint": "~0.6.4",
     "grunt-contrib-less": "~0.8.1",
@@ -31,7 +32,8 @@
     "grunt-processhtml": "^0.3.8",
     "grunt-svgstore": "^0.3.6",
     "grunt-wp-assets": "^0.2.6",
-    "grunt-wp-version": "~0.1.0"
+    "grunt-wp-version": "~0.1.0",
+    "load-grunt-tasks": "^3.2.0"
   },
   "dependencies": {
     "grunt-exec": "^0.4.6"
