--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-grunticon": "^1.2.9",
     "grunt-processhtml": "^0.3.8",
     "grunt-svgstore": "^0.3.6",
+    "grunt-text-replace": "^0.4.0",
     "grunt-wp-assets": "^0.2.6",
     "grunt-wp-version": "~0.1.0",
     "load-grunt-tasks": "^3.2.0"
