--- a/package.json
+++ b/package.json
@@ -24,14 +24,19 @@
     "grunt-bg-shell": "^2.3.1",
     "grunt-concurrent": "^2.0.1",
     "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-cssmin": "^0.13.0",
     "grunt-contrib-jshint": "~0.6.4",
     "grunt-contrib-less": "~0.8.1",
-    "grunt-contrib-uglify": "~0.2.4",
+    "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-filerev": "^2.3.1",
     "grunt-grunticon": "^1.2.9",
     "grunt-processhtml": "^0.3.8",
     "grunt-svgstore": "^0.3.6",
     "grunt-text-replace": "^0.4.0",
+    "grunt-usemin": "^3.1.0",
+    "grunt-wiredep": "^2.0.0",
     "grunt-wp-assets": "^0.2.6",
     "grunt-wp-version": "~0.1.0",
     "load-grunt-tasks": "^3.2.0"
