--- a/qApp/bower.json
+++ b/qApp/bower.json
@@ -13,6 +13,7 @@
     "ember-qunit": "0.2.8",
     "ember-qunit-notifications": "0.0.7",
     "qunit": "~1.17.1",
-    "bootstrap": "~3.3.2"
+    "bootstrap": "~3.3.2",
+    "requirejs": "~2.1.20"
   }
 }
