removed CORS errors, added a few DS.attributes inot models

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ library/honeyguide/vendor/mustache-cache/
 library/honeyguide/vendor/customizer-custom-cotnrols/
 library/honeyguide/vendor/settings-api/
 library/honeyguide/stacks/js/qApp/
+library/honeyguide/stacks/js/qApp/tmp
