--- a/bower.json
+++ b/bower.json
@@ -27,5 +27,8 @@
     "bootstrap": "~3.3.1",
     "jquery-sortable": "*",
     "sass-bootstrap-glyphicons": "*"
+  },
+  "devDependencies": {
+    "grunt-contrib-connect": "~0.11.2"
   }
 }
