--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
+    "ember-template-compiler": "^1.8.0",
     "grunt": "~0.4.2",
     "grunt-bg-shell": "^2.3.1",
     "grunt-concurrent": "^2.0.1",
@@ -39,9 +40,13 @@
     "grunt-wiredep": "^2.0.0",
     "grunt-wp-assets": "^0.2.6",
     "grunt-wp-version": "~0.1.0",
+    "handlebars": "~1.1.2",
     "load-grunt-tasks": "^3.2.0"
   },
   "dependencies": {
+    "ember-cli": "^1.13.8",
+    "ember-cli-htmlbars": "^1.0.0",
+    "grunt-contrib-connect": "^0.11.2",
     "grunt-exec": "^0.4.6"
   }
 }
