--- a/qApp/package.json
+++ b/qApp/package.json
@@ -33,7 +33,12 @@
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.14.1",
     "ember-export-application-global": "^1.0.2",
+    "ember-template-compiler": "^1.8.0",
     "express": "^4.8.5",
     "glob": "^4.0.5"
+  },
+  "dependencies": {
+    "ember-template-compiler": "^1.8.0",
+    "handlebars": "^1.3.0"
   }
 }
