--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "load-grunt-tasks": "^3.2.0"
   },
   "dependencies": {
-    "ember-cli": "^1.13.8",
-    "ember-cli-htmlbars": "^1.0.0",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-exec": "^0.4.6"
+    "ember-cli": "*",
+    "ember-cli-htmlbars": "*",
+    "grunt-contrib-connect": "*",
+    "grunt-exec": "*"
   }
 }
