--- a/qApp/package.json
+++ b/qApp/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.0",
     "ember-bootstrap": "0.2.0",
-    "ember-cli": "0.1.15",
+    "ember-cli": "*",
     "ember-cli-6to5": "^3.0.0",
     "ember-cli-app-version": "0.3.1",
     "ember-cli-dependency-checker": "0.0.7",
@@ -34,11 +34,10 @@
     "ember-data": "1.0.0-beta.14.1",
     "ember-export-application-global": "^1.0.2",
     "ember-template-compiler": "^1.8.0",
+    "handlebars": "^1.3.0",
     "express": "^4.8.5",
     "glob": "^4.0.5"
   },
   "dependencies": {
-    "ember-template-compiler": "^1.8.0",
-    "handlebars": "^1.3.0"
   }
 }
