--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ library/honeyguide/vendor/customizer-custom-cotnrols/
 library/honeyguide/vendor/settings-api/
 library/honeyguide/stacks/js/qApp/
 library/honeyguide/stacks/js/qApp/tmp
+qApp/tmp/
