--- a/qApp/bower.json
+++ b/qApp/bower.json
@@ -2,19 +2,19 @@
   "name": "ember-cli-wordpress",
   "dependencies": {
     "bootstrap": "~3.3.2",
-    "ember": "1.10.0",
+    "ember": "*",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli/ember-cli-test-loader#0.1.1",
-    "ember-data": "1.0.0-beta.14.1",
+    "ember-data": "*",
     "ember-data.model-fragments": "~0.4.1",
-    "ember-load-initializers": "ember-cli/ember-load-initializers#0.0.2",
+    "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.6",
     "ember-qunit": "0.2.8",
     "ember-qunit-notifications": "0.0.7",
     "ember-resolver": "~0.1.11",
     "handlebars": "2.0.0",
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#1.0.1",
-    "qunit": "~1.17.1",
+    "qunit": "*",
     "requirejs": "~2.1.20"
   }
 }
