--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "ember-bootstrap": "0.2.0",
+    "ember-devtools": "^3.2.0",
     "ember-template-compiler": "^1.8.0",
     "grunt": "~0.4.2",
     "grunt-bg-shell": "^2.3.1",
