--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ library/honeyguide/vendor/settings-api/
 library/honeyguide/stacks/js/qApp/
 library/honeyguide/stacks/js/qApp/tmp
 qApp/tmp/
+qApp/dist/
