--- a/qApp/bower.json
+++ b/qApp/bower.json
@@ -3,7 +3,7 @@
   "dependencies": {
     "bootstrap": "~3.3.2",
     "ember": "*",
-    "ember-data": "*",
+    "ember-data": "~1.13.11",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli/ember-cli-test-loader#0.1.1",
     "ember-data.model-fragments": "~0.4.1",
