--- a/qApp/package.json
+++ b/qApp/package.json
@@ -32,11 +32,11 @@
     "ember-cli-qunit": "0.3.7",
     "ember-cli-uglify": "1.0.1",
     "ember-export-application-global": "^1.0.2",
+    "ember-inputmask": "0.2.0",
     "ember-template-compiler": "^1.8.0",
     "express": "^4.8.5",
     "glob": "^4.0.5",
     "handlebars": "^1.3.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
