--- a/qApp/package.json
+++ b/qApp/package.json
@@ -26,6 +26,7 @@
     "ember-cli-app-version": "0.3.1",
     "ember-cli-dependency-checker": "0.0.7",
     "ember-cli-divshot": "^0.1.6",
+    "ember-cli-events-bus": "0.0.2",
     "ember-cli-htmlbars": "^0.6.0",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
@@ -33,6 +34,7 @@
     "ember-cli-uglify": "1.0.1",
     "ember-export-application-global": "^1.0.2",
     "ember-inputmask": "0.2.0",
+    "ember-lodash": "0.0.5",
     "ember-template-compiler": "^1.8.0",
     "express": "^4.8.5",
     "glob": "^4.0.5",
