--- a/qApp/package.json
+++ b/qApp/package.json
@@ -35,6 +35,7 @@
     "ember-export-application-global": "^1.0.2",
     "ember-inputmask": "0.2.0",
     "ember-lodash": "0.0.5",
+    "ember-restless": "^0.7.10",
     "ember-template-compiler": "^1.8.0",
     "express": "^4.8.5",
     "glob": "^4.0.5",
