--- a/qApp/package.json
+++ b/qApp/package.json
@@ -28,7 +28,7 @@
     "ember-cli-divshot": "^0.1.6",
     "ember-cli-events-bus": "0.0.2",
     "ember-cli-htmlbars": "^0.6.0",
-    "ember-cli-ic-ajax": "0.1.1",
+    "ember-cli-ic-ajax": "^0.2.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.7",
     "ember-cli-uglify": "1.0.1",
@@ -41,5 +41,7 @@
     "glob": "^4.0.5",
     "handlebars": "^1.3.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "ember-apijax": "^0.2.1"
+  }
 }
